<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FendOff</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="action_save_exit"><![CDATA[Save&Exit]]></string>
    <string name="action_add">Add</string>
    <string name="action_change_password">Change Password</string>
    <string name="entry_name">Entry name</string>
    <string name="entry_description">Entry description:</string>
    <string name="ok">Ok</string>
    <string name="enter_password">Enter Password:</string>
    <string name="reset_password">Reset password (clears the vault):</string>
    <string name="old_password">Old Password:</string>
    <string name="new_password">New Password</string>
    <string name="category_name">New category name:</string>
    <string name="finish">Finish</string>
    <string name="add_field">Add Field</string>
    <string name="category_type">Category type:</string>
    <string name="action_delete_category">Delete category</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="about_text">FendOff is an application to encrypt your files using an original encryption (VSEM 1.0).\nDeveloped by Victor Solovyev: victorsolov@gmail.com</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="done">Done</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>

</resources>
