<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".VaultActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:title="@string/action_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_change_password"
        android:title="@string/action_change_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_exit"
        android:title="@string/action_save_exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_category"
        android:title="@string/action_delete_category"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        app:showAsAction="never" />
</menu>
