<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1">

    <LinearLayout
        android:id="@+id/layout_new_entry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray1"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/entry_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/new_entry_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/strut"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/button_add_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@id/strut"
                android:layout_marginRight="5dp"
                android:onClick="addField"
                android:text="@string/add_field" />

            <Button
                android:id="@+id/button_new_entry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/strut"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5dp"
                android:onClick="createEntry"
                android:text="@string/done" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>